# scoped-api

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml
app/: main.py
app/auth/: auth.py  token_schema.py
app/core/: config.py  db_config.py  logging.py
app/db/: __init__.py  db_manager.py  timestamp.py  users.py  utils.py
app/lifecycle/: app_lifecycle.py  db_lifecycle.py
app/migrations/: env.py
app/migrations/versions/: 75a76579d0be_add_users_table.py
app/routers/: __init__.py
app/routers/admin/: admin_router.py
app/routers/auth/: user_me_router.py  user_register_router.py  user_token_router.py
tests/: conftest.py  description.txt  pytest_autogen.py  test_authorization.py  test_e2e.py  test_user_model.py
user/: create.py  get.py  user.py
