[project]
name = "scoped-api"
version = "0.1.0"
description = "FastAPI template with **JWT authentication** and **role-based scopes**."
authors = [
    {name = "dmvaled",email = "dmvaled@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "poetry-core (>=2.1.3,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
pre-commit = "^4.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true
unsafe-fixes = true

[tool.ruff.lint]
extend-select = ["E", "F", "W", "I", "B", "Q"]

[tool.ruff.lint.isort]
force-single-line = true
combine-as-imports = false
force-sort-within-sections = true
lines-after-imports = 2

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
