[project]
name = "scoped-api"
version = "0.1.0"
description = "FastAPI template with **JWT authentication** and **role-based scopes**."
authors = [
    {name = "dmvaled", email = "dmvaled@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiohttp (>=3.12.15,<4.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "email-validator (>=2.2.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "loguru (>=0.7.3)",
    "prometheus-client (>=0.22.1,<0.23.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "poetry-core (>=2.0.0)",
    "sentry-sdk (>=2.34.1,<3.0.0)",
    "sqlalchemy (>=2.0.43)",
    "uvicorn (>=0.35.0,<0.36.0)"
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
pre-commit = "^4.0.1"
mypy = "^1.17.1"
testcontainers = "^4.12.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-asyncio = "^1.1.0"

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true
unsafe-fixes = true

[tool.ruff.lint]
extend-select = ["E", "F", "W", "I", "B", "Q"]

[tool.ruff.lint.isort]
force-single-line = true
combine-as-imports = false
force-sort-within-sections = true
lines-after-imports = 2

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
